more modular filepaths
Drink bitch implemented.